<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MusicPlayerLite!</string>
    <string name="app_name">MusicPlayer Lite</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="trace_title">音乐标题</string>
    <string name="trace_artist">艺术家</string>
    <string name="trace_special">专辑</string>
    <string name="save_status_pro">当前状态: </string>
    <string name="save_status_init">初始化</string>
    <string name="option_menu_save">保存</string>
    <string name="option_menu_delete">删除</string>
    <string name="string_data">数据</string>
    <string name="save_status_saved">已保存!</string>
    <string name="save_status_deleted">已删除!</string>
    <string name="search">检索</string>
    <string name="context_menu_pro">长按2秒钟,弹出上下文菜单.</string>
    <string name="context_menu_new">新建</string>
    <string name="context_menu_open">打开</string>
    <string name="search_local">检索本地</string>
    <string name="search_internet">检索互联网</string>
    <string name="welcom_pro">关于</string>
    <string name="welcom">欢迎使用本应用!\n\nMusicPlayer lite\n\n教程示例程序</string>
    <string name="about_me">关于我们...</string>
    <string name="input_date">输入日期...</string>
    <string name="show_progress">显示进度条...</string>
    <string name="append">夜雨寄北 -李商隐</string>
    <string name="clear">君问归期未有期,\n巴山夜雨涨秋池.\n何当共剪西窗烛,\n却话巴山夜雨时.</string>
    <string name="input_week">输入星期...</string>
    <string name="exit">退出</string>
    <string name="time_separator">-</string>
    <string name="select_time">选择时间为: </string>
    <string name="start_service">启动service管理模块</string>
    <string name="start_dialer_lite">启动dialer lite模块</string>
    <string name="start_sms_lite">启动SMS lite模块</string>
    <string name="dialer">拨号</string>
    <string name="notify_incorrect_number">你输入的电话号码格式不对...</string>
    <string name="input_phone_number">请输入短信号码:</string>
    <string name="input_SMS">请输入短信内容:</string>
    <string name="send_SMS">发送短信</string>
    <string name="notify_re_input">请重新输入电话号码和短信内容</string>
    
</resources>
